[package]
name = "recaptcha"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
my-telemetry = { tag = "1.2.2", git = "https://github.com/MyJetTools/my-telemetry.git" }
reqwest = { version = "*", features = ["json"] }


serde = { version = "*", features = ["derive"] }
serde_json = "*"
